# steward

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml  docs.yml  release.yml
demo/: README.md  reset.sql  seed.sql
demo/admin/catalog/: products.hcl
demo/admin/config/: auth.hcl  dashboard.hcl  steward.hcl
demo/admin/customers/: customers.hcl
demo/admin/sales/: _group.hcl  order_items.hcl  orders.hcl
docs/: README.md  architecture.md  cli.md  deployment.md  getting-started.md  index.md  package.json  pnpm-lock.yaml  roles-and-permissions.md  security.md
docs/.vitepress/: config.mts
docs/configuration/: dashboard.md  detail-views.md  fields-and-widgets.md  groups-and-nav.md  overview.md  pages-and-queries.md  tables.md
src/: access.rs  actions.rs  assets.rs  auth.rs  config.rs  configedit.rs  dashboard.rs  globaledit.rs  groupsedit.rs  images.rs  interp.rs  introspect.rs  main.rs  meta.rs  plugins.rs  rows.rs  search.rs  sqlval.rs  state.rs  store.rs  vars.rs  views.rs
ui/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css  test-setup.ts
ui/src/api/: client.ts  mock.test.ts  mock.ts  types.ts
ui/src/components/: ActionModal.tsx  AuditTimeline.tsx  BrandMark.test.tsx  Breadcrumbs.tsx  BulkEditModal.tsx  CellValue.test.tsx  CellValue.tsx  Chart.tsx  ColumnMenu.tsx  CommandPalette.tsx  ConfigBuilder.tsx  CustomWidget.tsx  DataTable.tsx  EmptyState.tsx  ExportButton.tsx  FieldInput.tsx  FilterBuilder.tsx  FkSelect.tsx  GroupTabs.tsx  Icons.tsx  ImageField.tsx  ImportDrawer.tsx  JsonTree.tsx  KeyboardHelp.tsx  MetaRail.tsx  Modal.tsx  PermissionMatrix.tsx  RecordPeek.tsx  SavedViews.tsx  (+5 more)
(+86 files in other folders)
